 class for CContainer and CMDItab.
Added CMDITab class. A MDITab can be used as a view window for 
 a Frame or a Dockable. 
Added TabDemo Sample which demonstrates the use of CTab.
Added Docking TabbedMDI sample demonstrating the use of a tabbed mdi window
 in a docking application.
Added CFrame::GetToolbarData
CContainer now inherrits from CTab
Renamed dockable.h to docking.h

min and max macros are no longer defined by Win32++. MIN and MAX are 
defined instead

Version 6.4.1
=============
This release has the following bug fixes:
- Assertions in CContainer reported by VS2005(express) and VS2008(express)
- Definition of OPENFILENAME_SIZE_VERSION_400 added for VS6 

Version 6.4
===========

Major Changes
------------
* Docking:
  - Added tabbed docking container with optional toolbar
  - Added close button to the caption of docked windows
  - Added 'outer' docking  ie. docking at the side of the frame rather 
      than inside another dockable.
  - Added a second docking sample demonstrating containers
  - Added save/restore dock layout to docking samples
  - Added Close All Dockables and Default Dock Layout to docking samples
  - Added Win98 and WinME support for docking. 
* Added Region support to CDC class.
* Notepad sample enhancements:
  - Now capable of handling Unicode text
* Themes sample now demonstrates a ComboBoxEx control in its toolbar  
 
All Changes
-----------
Added CContainer class
Added CTabPage class  (a nested class of CContainer)
Added CTargetBottom   (a nested class of CDockable)
Added CTargetCentre   (a nested class of CDockable)
Added CTargetLeft     (a nested class of CDockable)
Added CTargetRight    (a nested class of CDockable)
Added CTargetTop      (a nested class of CDockable)
Added CDialog::SetDlgParent
Added CDC::CreateEllipticRegion
Added CDC::CreateEllipticRegionIndirect
Added CDC::CreatePolygonRgn
Added CDC::CreatePolyPolygonRgn
Added CDC::CreateRectRgn
Added CDC::CreateRectRgnIndirect
Added CDC::DetachRegion