@@ -10,6 +10,7 @@ Added Docking TabbedMDI sample demonstrating the use of a tabbed mdi window
 Added CFrame::GetToolbarData
 CContainer now inherrits from CTab
 Renamed dockable.h to docking.h
+Docking in and undocking from undocked dockables and containers is now supported
 
 min and max macros are no longer defined by Win32++. MIN and MAX are 
 defined instead
